# Set the project name
project(multithreading_in_moder_cpp)

# Specify the C++ standard
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_executable(10_launching_the_thread_object, 10_launching_the_thread_object.cpp)
add_executable(11_exception_and_join 11_exception_and_join.cpp)
add_executable(12_nasty_worker_arg 12_nasty_worker_arg.cpp)
add_executable(13_ref 13_ref.cpp)
add_executable(15_jthread 15_jthread.cpp)
add_executable(17_problematic_data_race 17_problematic_data_race.cpp)
add_executable(18_lock_guard 18_lock_guard.cpp)
add_executable(19_hierarchical_mutex 19_hierarchical_mutex.cpp)
add_executable(20_transferring_mutex_ownership 20_transferring_mutex_ownership.cpp)
add_executable(21_double_checked 21_double_checked.cpp)
add_executable(21_once_flag 21_once_flag.cpp)
add_executable(22_singletone 22_singletone.cpp)
add_executable(23_shared_mtx 23_shared_mtx.cpp)
add_executable(26_cv 26_cv.cpp)
add_executable(26_waiting_for_condition 26_waiting_for_condition.cpp)
add_executable(29_async_and_future 29_async_and_future.cpp)
add_executable(30_async 30_async.cpp)
add_executable(31_packaged_task 31_packaged_task.cpp)
add_executable(32_simple_future 32_simple_future.cpp)
add_executable(33_exception_and_async 33_exception_and_async.cpp)
add_executable(33_exception_and_promise 33_exception_and_promise.cpp)
add_executable(34_shared_future 34_shared_future.cpp)
add_executable(37_latch 37_latch.cpp)
add_executable(38_barrier 38_barrier.cpp)
add_executable(46_spin_lock 46_spin_lock.cpp)
add_executable(51_execution_policies 51_execution_policies.cpp)
add_executable(52_data_race 52_data_race.cpp)
add_executable(56_reduce 56_reduce.cpp)
add_executable(57_partial_scan 57_partial_scan.cpp)
add_executable(60_transform_reduce 60_transform_reduce.cpp)
add_executable(61_cool_transform_reduce 61_cool_transform_reduce.cpp)
add_executable(9_launching_the_thread 9_launching_the_thread.cpp)
add_executable(63_philosophers_deadlck 63_philosophers_deadlck.cpp)
add_executable(63_philosophers_deadlck_solve_hierarchy 63_philosophers_deadlck_solve_hierarchy.cpp)
add_executable(63_philosophers_livelck 63_philosophers_livelck.cpp)
add_executable(63_philosophers_livelck_sol 63_philosophers_livelck_sol.cpp)
add_executable(63_philosophers_lock_2_forks_to_solve_deadlck 63_philosophers_lock_2_forks_to_solve_deadlck.cpp)

add_subdirectory(760_concurrent_queue_with_cond_var)
